<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.themovieapp.ui.view.MovieListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.themovieapp.ui.activity.MainActivity">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/load_more_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:listData="@{viewModel.movieList}"
            tools:listitem="@layout/movie_list_item" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/movie_list_empty_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:onClick="@{() -> viewModel.getMovies()}"
            android:src="@drawable/refresh_icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showOnlyWhenEmpty="@{viewModel.movieList}"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/movie_list_empty_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal|top"
            android:text="@string/waiting_for_location_and_network"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_list_empty_button"
            app:showOnlyWhenEmpty="@{viewModel.movieList}"
            tools:visibility="gone" />

        <Button
            android:id="@+id/load_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onLoadMoreMoviesClicked()}"
            android:text="@string/load_more_movies"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:showOnlyWhenFull="@{viewModel.movieList}" />

        <ImageButton
            android:id="@+id/clear_db_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear_movie_list"
            android:onClick="@{() -> viewModel.clearDB()}"
            app:layout_constraintBottom_toBottomOf="@id/load_more_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/load_more_button"
            app:layout_constraintVertical_bias="0.0"
            app:showOnlyWhenFull="@{viewModel.movieList}"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/status_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/load_more_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/load_more_button"
            app:layout_constraintTop_toTopOf="@id/load_more_button"
            app:movieApiStatus="@{viewModel.status}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>