...
        android:id="@+id/home"
        android:name="com.example.themovieapp.ui.fragment.HomeFragment"
        android:label="Home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_topRatedMovieListFragment"
            app:destination="@id/top_rated_movie_search" />
        <action
            android:id="@+id/action_homeFragment_to_aboutAppFragment"
            app:destination="@id/about_App" />
        <action
            android:id="@+id/action_home_to_movieDetailFragment"
            app:destination="@id/movie_detail" />
    </fragment>

    <fragment
        android:id="@+id/about_App"
        android:name="com.example.themovieapp.ui.fragment.AboutFragment"
        android:label="about us"
...
